form and validation in html

--- a/index.html
+++ b/index.html
@@ -1,78 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-    <nav>
+      <nav>
         <button>home</button>
         <button>about us</button>
         <button>contact us</button>
-    </nav>
+      </nav>
     </header>
 
     <section>
-        <h1>my note</h1>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum accusamus ut, laborum est reiciendis numquam consequatur delectus? Blanditiis cum, nesciunt explicabo temporibus veritatis dicta quibusdam et velit tempore ut. Consectetur.
-        </p>
+      <h1>my note</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum accusamus
+        ut, laborum est reiciendis numquam consequatur delectus? Blanditiis cum,
+        nesciunt explicabo temporibus veritatis dicta quibusdam et velit tempore
+        ut. Consectetur.
+      </p>
     </section>
 
-    <article>
-        this is my article that I post yesterday
-    </article>
+    <article>this is my article that I post yesterday</article>
 
-
-    <ul >
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>JavaScript</li>
+    <ul>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>JavaScript</li>
     </ul>
 
     <ol type="i">
-          <li>HTML</li>
-        <li>CSS</li>
-        <li>JavaScript</li>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>JavaScript</li>
     </ol>
 
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
 
     <footer>2025 copyright - top tutor</footer>
 
-<mark>this is a marked text</mark>
-<br/>
-<u><p>hey guys</p></u>
+    <mark>this is a marked text</mark>
+    <br />
+    <u><p>hey guys</p></u>
 
-<!-- these are sub and super script-->
-<p>O<sub>2</sub></p>
-<p>4<sup>2</sup></p>
+    <!-- these are sub and super script-->
+    <p>O<sub>2</sub></p>
+    <p>4<sup>2</sup></p>
 
-<main>
-    <section>
-          wery ewuywoei 
-    </section>
+    <main>
+      <section>wery ewuywoei</section>
 
-        <section>
-           ewori rueopiwr
-    </section>
-</main>
+      <section>ewori rueopiwr</section>
 
-<br/>
-<br/>
-<br/>
-<br/>
-</body>
+      <section>
+        <video>
+          <source
+            src="/assets/Treasure Hunt Game - Google Chrome 2025-06-05 15-47-07.mp4"
+            type="video/mp4"
+          />
+          Your browser does not support the video tag.
+        </video>
+      </section>
+
+      <section>
+        <label> email </label>
+        <input
+          type="email"
+          aria-label="Email Address"
+          required
+          aria-required="true"
+          aria-describedby="true"
+        />
+      </section>
+    </main>
+
+    <br />
+    <br />
+    <br />
+    <br />
+  </body>
 </html>
 
 <!-- 
